CM-509: Fix gap between photos

--- a/src/staging/src/styles/parks.scss
+++ b/src/staging/src/styles/parks.scss
@@ -226,7 +226,7 @@
       @media (min-width: $mediumBreakpoint) {
         padding: 4px;
         &.main-park-photo-grid {
-          padding: 8px;
+          padding: 8px 0;
         }
       }
     }
